# travel-buddy

./: .gitignore  CONTRIBUTING.md  Procfile  README.md  database.db  db.sqlite3  install.sh  keys.json  main.tf  manage.py  pyproject.toml  requirements.txt  setup.py  start.sh  terraform.tfstate  terraform.tfvars  wsgi.py
.github/workflows/: format.yml  main.yml  test.yml  tests.yml
src/: Procfile  db.sqlite3  wsgi.py
src/travel_buddy/: app.py  db.sqlite3
src/travel_buddy/helpers/: helper_carpool.py  helper_general.py  helper_limiter.py  helper_login.py  helper_register.py  helper_routes.py
src/travel_buddy/static/css/: carpools.css  checkbox.css  theme.css  trends.css
src/travel_buddy/static/javascript/: autocomplete.js  checkbox.js  observer.js
src/travel_buddy/templates/: carpools.html  login.html  profile.html  register.html  routes.html  routes_display.html  settings.html  trends.html  view_carpool.html
src/travel_buddy/views/: carpool.py  login.py  logout.py  profile.py  register.py  routes.py  settings.py  trends.py
src/travel_recommender/: index.html  manage.py
src/travel_recommender/travel_recommender/: asgi.py  settings.py  urls.py  wsgi.py
tests/: keys_test.json  test_accounts.py  test_api.py  test_carpool.py  test_general.py  test_routes.py
travel_buddy/: asgi.py  settings.py  urls.py  wsgi.py
user/: forms.py  models.py  views.py
users/: apps.py  forms.py  views.py
users/templates/users/: register.html
