[tool.poetry]
name = "travel-buddy"
version = "0.1.0"
description = "A travel companion to help plan your journey while saving both money and the planet by providing route analysis and a carpool marketplace."
authors = ["Isaac Cheng <47993930+IsaacCheng9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
flask = "^3.0.3"
bcrypt = "^4.1.3"
requests = "^2.32.4"
googlemaps = "^4.5.3"
flask-limiter = "^3.7.0"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pytest = "^8.2.2"
pytest-steps = "^1.8.0"
ruff = "^0.4.10"

[tool.poetry.scripts]
app = "src.travel_buddy.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
